--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
-    
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
     "express": "^4.16.4",
     "hb": "*",
     "hbs": "^4.1.2",
+    "nodemon": "^2.0.12",
     "request": "^2.88.2"
   }
 }
